# pe

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/resources/: clients.csv  transactions.csv
engine/resources/processor/: accounts_medium.csv  transactions_medium.csv
engine/src/: client.rs  input.rs  lib.rs  processor.rs  transaction.rs  write_csv.rs
engine/tests/integration/: client.rs  mod.rs  processor.rs  transaction.rs
store/: Cargo.toml
store/src/: lib.rs  store.rs  store_db.rs  store_mem.rs
store/tests/integration/: mod.rs  store_db.rs  store_mem.rs
